--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     <h1>Мобильное приложение <br/>для общения с сервисными службами бизнеса</h1>
     <br/>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Зарегистрироваться</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScIEYbsgNFbwadbeQxv1i-G6EG0H_m8PYbYKjJiA85SpGA9eQ/viewform" 
+         class="btn btn-lg btn-secondary fw-bold border-white bg-white" target="_new"
+         >Зарегистрироваться на альфа-тестирование</a>
     </p>
   </main>
 
